# backend-for-student-government

./: .env.example  .gitignore  README.md  check_gallery.py  check_leadership.py  create_admin_user.py  create_tables.py  diagnose_and_fix.py  fix_all_database_issues.py  fix_database.py  fix_permissions.sql  grant_permissions.sql  hash_password.py  pyproject.toml  quick_fix.py  recreate_database.sql  requirements.txt  run_migrations.py  safe_setup.py  setup_hero_slideshow.py
migrations/: add_gallery_updated_at_column.sql  add_leadership_image_columns.sql  add_news_updated_at.sql  add_news_updated_at_column.sql  create_audit_log.sql  create_bills_table.sql  create_hero_slide_table.sql
src/: audit.py  auth.py  config.py  database.py  dependencies.py  main.py  model.py  routes_auth.py  routes_bills.py  routes_content.py  schemas.py  uploads.py
